--- a/index.html
+++ b/index.html
@@ -58,9 +58,45 @@
       // 🧠 Implement a `getAllReversed` method which returns the ints in reverse order
       // ❗ WARNING: except for `getAllReversed`, methods must respect the order of the integers
       // ❗ WARNING: note that none of the methods actually mutate the `ints` property
+     constructor(...args) {
+    this.ints = args;
+  }
 
-    }
+  getAll() {
+    return this.ints;
+  }
 
+  getEvens() {
+    return this.ints.filter(int => int % 2 === 0);
+  }
+
+  getNegatives() {
+    return this.ints.filter(int => int < 0);
+  }
+
+  getAllSquared() {
+    return this.ints.map(int => int * int);
+  }
+
+  pop() {
+    let lastInt = this.ints[this.ints.length - 1];
+    this.ints = this.ints.slice(0, -1);
+    return lastInt;
+  }
+
+  push(int) {
+    this.ints = [...this.ints, int];
+    return this.ints;
+  }
+
+  getEveryNth(n) {
+    return this.ints.filter((_, index) => index % n === 0);
+  }
+
+  getAllReversed() {
+    return [...this.ints].reverse();
+  }
+}
     // 👉 CHALLENGE 2 NerfGun
     class NerfGun {
       // 🧠 Constructor takes one argument: the total number of projectiles supported by the instance
@@ -76,8 +112,38 @@
       //      * When engaging the safety, return "Safety enabled!"
       //      * When disengaging the safety, return "Safety disabled!"
       // 🌟 HINT: instances need to keep track of their maximum capacity as well as their current capacity
+    constructor(totalProjectiles) {
+    this.totalProjectiles = totalProjectiles;
+    this.currentProjectiles = totalProjectiles;
+    this.safety = true;
+  }
 
+  shoot() {
+    if (this.currentProjectiles > 0 && !this.safety) {
+      this.currentProjectiles--;
+      return "Bang!";
+    } else {
+      return "Click!";
     }
+  }
+
+  reload(number) {
+    if (typeof number === 'number' && number > 0) {
+      this.currentProjectiles += number;
+      if (this.currentProjectiles > this.totalProjectiles) {
+        this.currentProjectiles = this.totalProjectiles;
+      }
+      return `${this.currentProjectiles} projectiles left!`;
+    } else {
+      return "Error reloading!";
+    }
+  }
+
+  toggleSafety() {
+    this.safety = !this.safety;
+    return this.safety ? "Safety enabled!" : "Safety disabled!";
+  }
+}
 
     // 👉 CHALLENGE 3 EBook
     class EBook {
@@ -95,8 +161,25 @@
       //    ebook.next() // returns null
       // 🌟 HINT: remember about the `slice` method which strings and arrays have
       // ❗ Feel free to implement `back`, although this is not required nor graded
+      constructor(text, charsPerPage) {
+    this.text = text;
+    this.charsPerPage = charsPerPage;
+    this.currentPage = 0;
+  }
 
+  next() {
+    const start = this.currentPage * this.charsPerPage;
+    const end = start + this.charsPerPage;
+    const page = this.text.slice(start, end);
+
+    if (page === '') {
+      return null;
+    } else {
+      this.currentPage++;
+      return page;
     }
+  }
+}
 
     // 👉 CHALLENGE 4 AntFarm
     class AntFarm {
@@ -130,8 +213,39 @@
       //      console.log(list) // prints ["a"]
       // 👉 HINT: if you are not feeling confident with map and filter, solve the problem with for loops,
       //      and with the piece of mind of all tests passing, refactor to use map/filter
+      constructor(...args) {
+    this.ants = args.map(name => ({ name, health: 100 }));
+  }
 
-    }
+  work() {
+  let startingAnts = this.ants.length;
+
+  if (startingAnts === 0) {
+    return "No ants here. Did you work them to death?";
+  }
+
+  this.ants = this.ants.map(ant => {
+    ant.health -= 20;
+    return ant;
+  }).filter(ant => ant.health > 0);
+
+  return `${startingAnts} ants starting work!`;
+}
+
+  feed(name) {
+    let found = false;
+
+    this.ants = this.ants.map(ant => {
+      if (ant.name === name) {
+        ant.health += 15;
+        found = true;
+      }
+      return ant;
+    });
+
+    return found ? "Yum!" : `${name} not found!`;
+  }
+}
 
     // 🧪 TESTS, do not make any changes below this line ===================
     // 🧪 TESTS, do not make any changes below this line ===================
